DDF-2467 Added Solrj client agnostic Solr Catalog Provider

--- a/catalog/solr/pom.xml
+++ b/catalog/solr/pom.xml
@@ -33,6 +33,7 @@
         </dependencies>
     </dependencyManagement>
     <modules>
+        <module>catalog-solr-provider</module>
         <module>catalog-solr-embedded-provider</module>
         <module>catalog-solr-external-provider</module>
         <module>catalog-solr-cloud-provider</module>
