DDF-2467 Fix integration tests for new Solr provider and factory

--- a/distribution/ddf-common/src/main/resources/etc/system.properties
+++ b/distribution/ddf-common/src/main/resources/etc/system.properties
@@ -48,6 +48,13 @@ org.codice.ddf.system.siteContact=
 org.codice.ddf.system.version=${project.version}
 org.codice.ddf.system.organization=${organization.name}
 
+# Solr client configuration
+# Supported clients: HttpSolrClient CloudSolrClient EmbeddedSolrServer
+solr.client = HttpSolrClient
+solr.http.url = ${org.codice.ddf.system.protocol}${org.codice.ddf.system.hostname}:${org.codice.ddf.system.httpsPort}/solr
+# solr.data.dir = ${karaf.home}/data/solr
+# solr.cloud.zookeeper = ${org.codice.ddf.system.hostname}:9983
+
 # Thread Pool Settings
 # Size of thread pool used for handling UI queries, federating requests, and downloading resources
 # See "Configuring Thread Pools" under "Managing" documentation.
